--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <header class="page-header"> 
     <div class="container">
-     Моя почта для связи - grrrizly92@mail.ru
+     <a class='header-email'
+     href="mailto:volkovnikita2021@mail.ru">volkovnikita2021@mail.ru </a>
+     <a class="header-phone" href="tel:+7960*******">+7 960 *** ** **</a>
    </div>
     </header>
 
