--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 
     <footer class="page-footer">
        <div class="container">
-      Мои контакты: 
-      Вк - https://vk.com/oldchild
+      <a class='footer-email'
+     href="mailto:volkovnikita2021@mail.ru">volkovnikita2021@mail.ru </a>
+     <a class="footer-phone" href="tel:+7960*******">+7 960 *** ** **</a>
     </div>
     </footer>
   </body>
