--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="intro">
        <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
-      <figure class="user-image"><img src="files/user.jpg" width="900" height="600" alt="Моя фотография"></figure>
+      <figure class="user-image"><img src="files/user.jpg" width="920" height="550" alt="Моя фотография"></figure>
       <h3>Я красив и молод.</h3>
       <p>Хочу равзиваться в front-end.</p>
       <h3>Чем могу быть полезен?</h3>
@@ -37,8 +37,9 @@
     <section class="portfolio">
        <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+<figure class="project-image"><img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса"> </figure>
       <h3>Сайт инструктора Кекса</h3>
+      <a class='button'href="souce/project/index.html">Открой посмотри</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
