--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
       <h2 class="subheading">Мои работы</h2>
 <figure class="project-image"><img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса"> </figure>
       <h3>Сайт инструктора Кекса</h3>
-            <p>Небольшой лендинг о школе для начинающих.</p>
-<a class='button'href="souce/project/index.html">Открой посмотри</a>
+       <p>Небольшой лендинг о школе для начинающих.</p>
+<a class="button" href="source/project/index.html">Открой посмотри</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
     </div>
     </section>
-
     <footer class="page-footer">
        <div class="container">
       <a class='footer-email'
