--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <h3>Чем могу быть полезен?</h3>
       <p>Могу простенький сайт сверстать.По-тихоньку.</p>
     </div>
+    <div class="skills">
+      <h3>Мои навыки</h3>
+    </div>
     </section>
 
     <section class="portfolio">
