--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     </div>
     <div class="skills">
       <h3>Мои навыки</h3>
+      <dl class="skill-list">
+      <dt>HTML</dt>
+      <dl><div>60%</div></dl>
+      <dt>CSS</dt>
+     <dl><div>40%</div></dl>
+    </dl>
     </div>
     </section>
 
