--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <div class="skills">
       <h3>Мои навыки</h3>
       <dl class="skill-list">
-      <dt>HTML</dt>
-      <dl><div>60%</div></dl>
-      <dt>CSS</dt>
-     <dl><div>40%</div></dl>
+      <dt class="skill-html">HTML</dt>
+      <dl class="level"><div>60%</div></dl>
+      <dt class="skill-css">CSS</dt>
+     <dl class="level"><div>40%</div></dl>
     </dl>
     </div>
     </section>
