--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <h3>Мои навыки</h3>
       <dl class="skill-list">
       <dt class="skill-html">HTML</dt>
-      <dl class="level"><div>60%</div></dl>
+      <dd class="level"><div>60%</div></dd>
       <dt class="skill-css">CSS</dt>
-     <dl class="level"><div>40%</div></dl>
+     <dd>> class="level"><div>40%</div></dd>
     </dl>
     </div>
     </section>
