--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="skills">
       <h3>Мои навыки</h3>
-      <dl class="skill-list">
+      <dl class="skills-list">
         <dt class="skill-html">HTML</dt>
         <dd class="level"><div style="width: 60%;">60%</div></dd>
         <dt class="skill-css">CSS</dt>
