--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
     </section>
 
     <section class="intro">
-       <div class="container">
+    <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image"><img src="files/user.jpg" width="550" height="650" alt="Моя фотография"></figure>
-      <h3>Я красив и молод.</h3>
+      <div>
+        <h3>Я красив и молод.</h3>
       <p>Хочу равзиваться в front-end.</p>
-      <h3>Чем могу быть полезен?</h3>
+      </div>
+      <div>
+        <h3>Чем могу быть полезен?</h3>
       <p>Могу простенький сайт сверстать.По-тихоньку.</p>
-    </div>
+      </div>
     <div class="skills">
       <h3>Мои навыки</h3>
       <dl class="skills-list">
@@ -41,7 +44,8 @@
         <dd class="level"><div style="width: 40%;">40%</div></dd>
       </dl>
     </div>
-    </section>
+  </div>
+     </section>
 
     <section class="portfolio">
        <div class="container">
