--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <figure class="user-image"><img src="files/user.jpg" width="550" height="650" alt="Моя фотография"></figure>
       <div>
         <h3>Я красив и молод.</h3>
-        <p>Хочу равзиваться в front-end.</p>
+        <p>Хочу развиваться в front-end.</p>
       </div>
       <div>
         <h3>Чем могу быть полезен?</h3>
