--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <figure class="user-image"><img src="files/user.jpg" width="550" height="650" alt="Моя фотография"></figure>
       <div>
         <h3>Я красив и молод.</h3>
-        <p>Хочу развиваться в front-end.</p>
+        <p>Узнал прикольное слово - "front-end".</p>
       </div>
       <div>
         <h3>Чем могу быть полезен?</h3>
-        <p>Могу простенький сайт сверстать.По-тихоньку.</p>
+        <p>Я что, яблоко?</p>
       </div>
       <div class="skills">
       <h3>Мои навыки</h3>
@@ -53,10 +53,11 @@
 <figure class="project-image"><img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса"> </figure>
       <h3>Сайт инструктора Кекса</h3>
        <p>Небольшой лендинг о школе для начинающих.</p>
-<a class="button" href="source/project/index.html">Открыть страницу</a>
+<a class="button" href="source/project/index.html">Открой,погляди</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
+<a class="button" href="source/project1/index.html">Открой,погляди</a>
     </div>
     </section>
     <footer class="page-footer">
