--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
     <section class="portfolio">
        <div class="container">
       <h2 class="subheading">Мои работы</h2>
-<figure class="project-image"><img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса"> </figure>
+<figure class="project-image"><img src="files/project.jpg" width="448" height="256" alt="Сайт конструктора Кекса"> </figure>
       <h3>Сайт инструктора Кекса</h3>
        <p>Небольшой лендинг о школе для начинающих.</p>
 <a class="button" href="source/project/index.html">Открой,погляди</a>
 
+<figure class="project-image1"><img src="files/project1.jpg" width="448" height="256" alt="Блог начинающего верстальщика"> </figure>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
 <a class="button" href="source/project1/index.html">Открой,погляди</a>
