--- a/index.html
+++ b/index.html
@@ -50,14 +50,18 @@
     <section class="portfolio">
        <div class="container">
       <h2 class="subheading">Мои работы</h2>
-      <h3>Сайт инструктора Кекса</h3>
-      <figure class="project-image"><img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса"> </figure>
-       <p>Небольшой лендинг о школе для начинающих.</p>
-<a class="button" href="source/project/index.html">Открой,погляди</a>
-      <h3><br>Блог начинающего верстальщика</h3>br></h3>
-      <figure class="project-image1"><img src="files/project1.jpg" width="928" height="536" alt="Блог начинающего верстальщика"> </figure>
-      <p>Статический блог про обучение HTML и CSS.</p>
-<a class="button" href="source/project1/index.html">Открой,погляди</a>
+      <div>
+        <h3>Сайт инструктора Кекса</h3>
+          <figure class="project-image"><img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса"> </figure>
+          <p>Небольшой лендинг о школе для начинающих.</p>
+        <a class="button" href="source/project/index.html">Открой,погляди</a>
+      </div>
+      <div>
+        <h3>Блог начинающего верстальщика</h3>
+         <figure class="project-image1"><img src="files/project1.jpg" width="928" height="536" alt="Блог начинающего верстальщика"> </figure>
+        <p>Статический блог про обучение HTML и CSS.</p>
+        <a class="button" href="source/project1/index.html">Открой,погляди</a>
+      </div>
     </div>
     </section>
     <footer class="page-footer">
