--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a class="button" href="source/project/index.html">Открой,погляди</a>
       </div>
       <div>
-        <h3>Блог начинающего верстальщика</h3>
+        <h3><br>Блог начинающего верстальщика</br></h3>
          <figure class="project-image1"><img src="files/project1.jpg" width="928" height="536" alt="Блог начинающего верстальщика"> </figure>
         <p>Статический блог про обучение HTML и CSS.</p>
         <a class="button" href="source/project1/index.html">Открой,погляди</a>
