--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    </div>
     </header>
 
+<main>
     <section class="hero-image">
       <div class="container">
         <h1 class="heading">Никита Волков</h1>
@@ -60,6 +61,8 @@
              <a class="button" href="source/project1/index.html">Открой,погляди</a>
       </div>
     </section>
+</main>
+
     <footer class="page-footer">
        <div class="container">
       <a class='footer-email'
