--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body>
     <header class="page-header"> 
     <div class="container">
-     <a class='header-email'
-     href="mailto:volkovnikita2021@mail.ru">volkovnikita2021@mail.ru </a>
+     <a class='header-email' href="mailto:volkovnikita2021@mail.ru">volkovnikita2021@mail.ru </a>
      <a class="header-phone" href="tel:+7960*******">+7 960 *** ** **</a>
    </div>
     </header>
@@ -27,7 +26,10 @@
     <section class="intro">
      <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
-      <figure class="user-image"><img src="files/user.jpg" width="550" height="650" alt="Моя фотография"></figure>
+      <figure class="user-image">
+        <img src="files/user.jpg" width="550" height="650" alt="Моя фотография">
+        <figcaption>"Это я".</figcaption>
+      </figure>
       <div>
         <h3>Я красив и молод.</h3>
         <p>Узнал прикольное слово - "front-end".</p>
@@ -52,11 +54,17 @@
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
           <h3>Сайт инструктора Кекса</h3>
-            <figure class="project-image"><img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса"> </figure>
+            <figure class="project-image">
+              <img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса">
+              <figcaption>Принскрин Сайта инструктура Кекса.</figcaption>
+            </figure>
             <p>Небольшой лендинг о школе для начинающих.</p>
             <a class="button" href="source/project/index.html">Открой,погляди</a>
           <h3><br>Блог начинающего верстальщика</br></h3>
-            <figure class="project-image1"><img src="files/project1.jpg" width="928" height="536" alt="Блог начинающего верстальщика"> </figure>
+            <figure class="project-image1">
+              <img src="files/project1.jpg" width="928" height="536" alt="Блог начинающего верстальщика">
+              <figcaption>Принскрн Блога начинающего вертальщика.</figcaption>
+            </figure>
             <p>Статический блог про обучение HTML и CSS.</p>
              <a class="button" href="source/project1/index.html">Открой,погляди</a>
       </div>
@@ -64,11 +72,11 @@
 </main>
 
     <footer class="page-footer">
-       <div class="container">
-      <a class='footer-email'
+      <div class="container">
+        <a class='footer-email'
      href="mailto:volkovnikita2021@mail.ru">volkovnikita2021@mail.ru </a>
-     <a class="footer-phone" href="tel:+7960*******">+7 960 *** ** **</a>
-    </div>
+        <a class="footer-phone" href="tel:+7960*******">+7 960 *** ** **</a>
+      </div>
     </footer>
   </body>
 </html>
