--- a/index.html
+++ b/index.html
@@ -52,21 +52,35 @@
 
     <section class="portfolio">
       <div class="container">
+        <table>
         <h2 class="subheading">Мои работы</h2>
-          <h3>Сайт инструктора Кекса</h3>
-            <figure class="project-image">
+          <thead>
+            <tr>
+              <th scope="row"> <h3>Сайт инструктора Кекса</h3> </th>
+              <th scope="row"> <h3>Блог начинающего верстальщика</h3></th>
+            </tr>
+          </thead>>
+          <tbody>
+          <tr>
+           <td><figure class="project-image">
               <img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса">
               <figcaption>Принскрин Сайта инструктура Кекса.</figcaption>
-            </figure>
-            <p>Небольшой лендинг о школе для начинающих.</p>
-            <a class="button" href="source/project/index.html">Открой,погляди</a>
-          <h3><br>Блог начинающего верстальщика</br></h3>
-            <figure class="project-image1">
+            </figure></td>
+           <td><figur class="project-image1">
               <img src="files/project1.jpg" width="928" height="536" alt="Блог начинающего верстальщика">
               <figcaption>Принскрн Блога начинающего вертальщика.</figcaption>
-            </figure>
-            <p>Статический блог про обучение HTML и CSS.</p>
-             <a class="button" href="source/project1/index.html">Открой,погляди</a>
+            </figure></td>
+          </tr>
+          <tr>
+            <td><p>Небольшой лендинг о школе для начинающих.</p></td>
+            <td><p>Статический блог про обучение HTML и CSS.</p><td>
+          </tr>
+            <td><a class="button" href="source/project/index.html">Открой,погляди</a></td>
+            <td><a class="button" href="source/project1/index.html">Открой,погляди</a></td>
+          <tr>
+          </tr>
+          </tbody>
+        </table>
       </div>
     </section>
 </main>
