--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
     <section class="portfolio">
       <div class="container">
-        <table>
+        <table class="table">
         <h2 class="subheading">Мои работы</h2>
           <thead>
             <tr>
-              <th scope="row"> <h3>Сайт инструктора Кекса</h3> </th>
+              <th scope="row"><h3>Сайт инструктора Кекса</h3></th>
               <th></th>
-              <th scope="row"> <h3>Блог начинающего верстальщика</h3></th>
+              <th scope="row"><h3>Блог начинающего верстальщика</h3></th>
             </tr>
           </thead>>
           <tbody>
