--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <th></th>
               <th scope="row"><h3>Блог начинающего верстальщика</h3></th>
             </tr>
-          </thead>>
+          </thead>
           <tbody>
           <tr>
            <td><figure class="project-image">
