--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
           <tr>
            <td><figure class="project-image">
               <img src="files/project.jpg" width="928" height="536" alt="Сайт конструктора Кекса">
-              <figcaption>Принскрин Сайта инструктура Кекса.</figcaption>
-            </figure></td>
+               </figure>
+           </td>
           <td></td>
            <td><figur class="project-image1">
               <img src="files/project1.jpg" width="928" height="536" alt="Блог начинающего верстальщика">
-              <figcaption>Принскрн Блога начинающего вертальщика.</figcaption>
-            </figure></td>
+               </figure>
+           </td>
           </tr>
           <tr>
             <td><p>Небольшой лендинг о школе для начинающих.</p></td>
