--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
         <img src="files/user.jpg" width="550" height="650" alt="Моя фотография">
-        <figcaption>"Это я".</figcaption>
       </figure>
       <div>
         <h3>Я красив и молод.</h3>
@@ -52,7 +51,7 @@
 
     <section class="portfolio">
       <div class="container">
-        <table class="table">
+        <table>
         <h2 class="subheading">Мои работы</h2>
           <thead>
             <tr>
