--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
     <title>Портфолио Junior верстальщика</title>
   </head>
@@ -67,7 +67,7 @@
                </figure>
            </td>
           <td></td>
-           <td><figur class="project-image1">
+           <td><figur class="project-image">
               <img src="files/project1.jpg" width="928" height="536" alt="Блог начинающего верстальщика">
                </figure>
            </td>
